# mydeepsearcher

./: .dockerignore  .gitignore  ARCHI.md  Dockerfile  MAINTAINERS  OWNERS_ALIASES  README.md  app.py  clean_import_poetry.sh  config.yaml  docker-compose.yml  handlers.py  load_azure_private_data.py  main.py  pyproject.toml  requirement_checker.py  requirements.txt  requirements_fixed.txt  startup.sh  template_env.md
.github/workflows/: mydeepsearcher_pmoai-web-2.yml  ruff.yml
deep_searcher_chat/: backup_app.py  helper_md_to_docx.py  prod_app.py  prod_chat_handler.py  prod_cookie_manager.py
deepsearcher/: configuration.py  configuration_backup.py  deepsearch.py  light_configuration.py  offline_loading.py  online_query.py
deepsearcher/agent/: __init__.py  base.py  chain_of_rag.py  collection_router.py  deep_search.py  final_paper.py  naive_rag.py  rag_router.py  web_search_retriever.py
deepsearcher/agents/: chain_of_rag_agent.py  collection_router_agent.py  confidence_agent.py  cor_confidence_agent.py  cor_summarizer_agent.py  decomposer_agent.py  deep_seacher_agent.py  final_paper_agent.py  followup_agent.py  intermediate_answer_agent.py  judge_agent.py  naive_rag_agent.py  rag_router_agent.py  reflection_agent.py  reranker_agent.py  retrieval_agent.py  retrieval_tool.py  summarizer_agent.py  web_search_agent.py
deepsearcher/analytics/: analytics_interface.py  base.py
deepsearcher/analytics/structured/: database.py  reporting.py  statistics.py  visualization.py
deepsearcher/contextmgmt/: cachemanager.py
deepsearcher/embedding/: openai_embedding.py
deepsearcher/llm/: azure_openai.py  base.py
deepsearcher/loader/: splitter.py
deepsearcher/loader/file_loader/: __init__.py  docling_loader.py  excel_loader.py  json_loader.py  pdf_loader.py  pptx_loader.py  unstructured_loader.py
deepsearcher/loader/web_crawler/: __init__.py  base.py  ds_crawler.py
deepsearcher/orchestration/: graph_flow.py
deepsearcher/pipelines/: chainofrag_flow.py  deepsearcher_flow.py  naiverag_flow.py
deepsearcher/tools/: azure_utils.py  milvus_collections_cleaner.py  test_connection.py
deepsearcher/utils/: autogen_helper.py  rag_helpers.py  rag_prompts.py
deepsearcher/vector_db/: base.py  milvus.py
deepsearcher/webservice/: __init__.py  base.py  ddgsearchservice.py
evaluation/: easy_eval.py  eval_config.yaml  evaluate.py  ragas_eval.py
evaluation/plot_results/: detail_plot,py  statistics_plot.py
examples/: basic_example.py  load_website_using_firecrawl.py
tests/: test_autogen.py  test_configuration.py  test_docling.py  test_llmconn.py  test_milvus.py  test_pptx.py  test_websearch.py  test_websearchagent.py
